--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "demonode",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "nodemon --inspect index.js",
+    "start": "nodemon --inspect src/index.js",
+    "watch": "node-sass --w src/resources/scss/app.scss src/public/css/app.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,6 +26,11 @@
   "homepage": "https://github.com/trngmhuu/DemoNodeJS#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.3"
+  },
+  "devDependencies": {
+    "node-sass": "^9.0.0"
   }
 }
